app/assets/stylesheets/grid.css.scss
@import 'colors';
@import 'bourbon';

.grid {
  padding: 50px 7.5px;
  // need to set explicit height to control flexbox row spacing.
  height: 5px;
  flex-wrap: wrap;
  max-width: 860px;
  margin: 0 auto;
}

.grid-item {
  min-width: calc(15% - 15px);
  height: 200px;
  padding: 15px;
  margin: 7.5px;
  background: $lightGray;
  color: $darkGray;
  cursor: pointer;
  box-shadow: 2px 3px 5px 2px $fadedBlack;
  @include transition( all .3s ease);
  overflow: hidden;
  position: relative;
  flex: 1;
}

.row { min-width: 100%; }

.grid-item a { color: $black; }

.grid-item.big { 
  min-width: calc(50% - 15px); 
}

.grid-item:hover { background: $white; }

.grid-item .post { display: block; flex: 1; overflow: hidden; }

.grid-item .meta {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 15px;
  background: $fadedRed;
  color: $white;
  @include transition( all .3s ease);
  @include transform(translate3d(0, 50px, 0));
  justify-content: space-between;
  font-size: .8em;
}

.grid-item:hover .meta { @include transform(translate3d(0, 0, 0)); }

.grid img { display: block; margin: 0 auto; }

